WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84878
REGRESSION (
r110494
): Dragging images from Safari to Finder results in .webloc rather than image file
https://bugs.webkit.org/show_bug.cgi?id=84878
Summary
REGRESSION (r110494): Dragging images from Safari to Finder results in .weblo...
Enrica Casucci
Reported
2012-04-25 11:51:08 PDT
Repro steps: - launch safari and navigate to www.apple.com/startpage - drag one of the images to the desktop Expected - A file is created with the image Actual - A webloc is created instead. <
rdar://problem/11155407
>
Attachments
Patch
(4.92 KB, patch)
2012-04-25 11:59 PDT
,
Enrica Casucci
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2012-04-25 11:59:05 PDT
Created
attachment 138850
[details]
Patch
Enrica Casucci
Comment 2
2012-04-25 13:59:10 PDT
Committed revision 115242.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug