Source/WebCore: REGRESSION (r110494): Dragging images from Safari to Finder results in .webloc rather than image file https://bugs.webkit.org/show_bug.cgi?id=84878 <rdar://problem/11155407>

In WebKit2, it could happen to try to start the drag twice, given the asynchronous nature
of the communication between the UI process and the WebProcess.
We need to guarantee that we don't do that, otherwise on OS X the pasteboard ownership
gets changed which affects the promised file types.

Reviewed by Alexey Proskuryakov.

* page/EventHandler.cpp:
(WebCore::EventHandler::handleDrag): Reset m_mouseDownMayStartDrag to false to
avoid attempting to start another drag.

Source/WebKit2: REGRESSION (r110494): Dragging images from Safari to Finder results in .webloc rather than image file
https://bugs.webkit.org/show_bug.cgi?id=84878
<rdar://problem/11155407>

In WebKit2, it could happen to try to start the drag twice, given the asynchronous nature
of the communication between the UI process and the WebProcess.
We need to guarantee that we don't do that, otherwise on OS X the pasteboard ownership
gets changed which affects the promised file types.
The fix for the problem is in WebCore and we can now remove the guard on _setDragImage.

Reviewed by Alexey Proskuryakov.

* UIProcess/API/mac/WKView.mm:
(-[WKView mouseDown:]):
(-[WKView _setDragImage:at:linkDrag:]):



Canonical link: https://commits.webkit.org/102394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115242 268f45cc-cd09-0410-ab3c-d52691b4dbfc